2018-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Initialize allocated scanline,
	strip, or tile to zero in order to avoid complaint about use of
	uninitialized data if libtiff fails to write all the bytes.  Fixes
	oss-fuzz 8551 "graphicsmagick/coder_TIFF_fuzzer:
	Use-of-uninitialized-value in ImportGrayQuantumType". (Credit to
	OSS-Fuzz)

	* magick/annotate.c (RenderFreetype): Throw an exception if
	DrawInfo font is null.  Should fix oss-fuzz 8557
	"graphicsmagick/coder_PCD_fuzzer: Unknown signal in
	RenderFreetype" and may fix oss-fuzz 8544
	"graphicsmagick/coder_PCD_fuzzer: Null-dereference READ in
	RenderFreetype". (Credit to OSS-Fuzz)

	* coders/jpeg.c (ReadGenericProfile): Add/improve tracing for
	profile size and when JPEG header is being read.

2018-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Report a useful exception for
	the case when the JNG file fails to provide the necessary image
	chunks to allocate the color image.  Inspired by oss-fuzz 8666
	"graphicsmagick/coder_JNG_fuzzer: ASSERT: data != (const char *)
	NULL" although the reported issue was not reproduced.

2018-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): Fix off-by-one in length validation
	for TERM chunk which allowed one byte heap read overflow.  Fixes
	oss-fuzz 8615 "graphicsmagick/coder_MNG_fuzzer:
	Heap-buffer-overflow in mng_get_long". (Credit to OSS-Fuzz)
	(ReadMNGImage): Fix leak of MngInfo in error reporting path.
	Fixes oss-fuzz 8604 "graphicsmagick/coder_MNG_fuzzer: Direct-leak
	in ReadMNGImage". (Credit to OSS-Fuzz)
	(ReadMNGImage): Verify that claimed chunk size does not exceed
	input size.  Fixes oss-fuzz 8564 "graphicsmagick/coder_MNG_fuzzer:
	Out-of-memory in graphicsmagick_coder_MNG_fuzzer". (Credit to
	OSS-Fuzz)

	* coders/tiff.c (ReadTIFFImage): Reject files with excessive
	samples-per-pixel or extra-samples. Avoids potential issues